# you-receipt

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  GCP_DEPLOYMENT.md  GITHUB_PUSH_CHECKLIST.md  LOCAL_SETUP.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SHEETS_SETUP.md  UPDATE_SUMMARY.md  create_secrets.sh  deploy.sh  docker-compose.yml  main.py  pyproject.toml  setup.sh  update_secrets.sh  verify_deployment.sh  verify_setup.py  verify_sheets_access.sh
models/: __init__.py  schemas.py
services/: __init__.py  aggregator.py  converter.py  database.py  gcs.py  ocr.py  sheets.py
templates/: base.html  home.html  manual_input.html  ocr_input.html
